Create easy templates for showcase

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-    <p>Good Day! You're at "{{ location.city }}, "{{ location.region }}"</p>
+    <p>Good Day! You're at "{{ location.city }}, {{ location.region }}"</p>
     <p>It's currently {{ temperature }}°C, mostly {{ weather_description }}</p>
 
 
