--- a/templates/result.html
+++ b/templates/result.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 
-<p>You've search for "{{ location }}" city</p>
-<p>It's currently {{ temperature }}°C, mostly {{ weather_description }}</p>
+<p>You've searched for "{{ location }}"</p>
+<p>It's currently {{ temperature }}°C, mostly {{ weather_description }}.</p>
 
 
 {% endblock %}
